...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/textViewSubject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_medium"
            android:layout_marginTop="@dimen/default_margin_content"
            android:layout_marginEnd="@dimen/default_margin_medium"
            android:ellipsize="end"
...
            app:layout_constraintTop_toBottomOf="@+id/textViewSubject"
            tools:itemCount="4"
            tools:listitem="@layout/item_label_badge"
            tools:orientation="horizontal" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMessages"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/default_margin_content_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
