...
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuActionSwitchType"
        android:icon="@drawable/ic_switch_white_24dp"
        android:orderInCategory="100"
        android:title="@string/switch_to_standard_email"
        app:showAsAction="ifRoom" />
</menu>

