...
                android:contentDescription="@string/show_public_key"
                app:cornerRadius="@dimen/default_margin_small"
                app:icon="@drawable/outline_info_48"
                app:iconGravity="textStart"
                app:iconSize="@dimen/icon_size_big"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintEnd_toStartOf="@+id/btnCopyToClipboard"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintTop_toBottomOf="@+id/dividerPublicKeys" />

            <Button
                android:id="@+id/btnCopyToClipboard"
                style="?attr/materialIconButtonFilledStyle"
...
                android:contentDescription="@string/copy_to_clipboard"
                app:cornerRadius="@dimen/default_margin_small"
                app:icon="@drawable/baseline_content_copy_48"
                app:iconGravity="textStart"
                app:iconSize="@dimen/icon_size_big"
                app:layout_constraintBottom_toBottomOf="@+id/btnShowPubKey"
                app:layout_constraintEnd_toStartOf="@+id/btnSaveToFile"
                app:layout_constraintStart_toEndOf="@+id/btnShowPubKey"
                app:layout_constraintTop_toTopOf="@+id/btnShowPubKey" />

            <Button
                android:id="@+id/btnSaveToFile"
                style="?attr/materialIconButtonFilledStyle"
...
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/textViewMasterKey" />

            <TextView
                android:id="@+id/textViewFingerprint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_small"
                android:textIsSelectable="true"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
...
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/textViewFingerprint"
                tools:text="Algorithm: ELGAMAL_GENERAL/4096" />

            <TextView
                android:id="@+id/textViewCreationDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_content_small"
                android:textIsSelectable="true"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
...
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/textViewCreationDate"
                tools:text="Modified: Nov 3, 2017" />

            <TextView
                android:id="@+id/textViewExpirationDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_content_small"
                android:textIsSelectable="true"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
...
                app:drawableStartCompat="@drawable/ic_outline_warning_amber_16"
                app:layout_constraintBottom_toBottomOf="@+id/textViewStatus"
                app:layout_constraintStart_toEndOf="@+id/textViewStatus"
                app:layout_constraintTop_toTopOf="@+id/textViewStatus" />

            <TextView
                android:id="@+id/tVPassPhraseVerification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/stored_pass_phrase_loading"
                android:textColor="@color/colorPrimaryLight"
                android:textIsSelectable="true"
...
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/textViewUserIDs" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewUserIds"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/dividerUserIds"
                tools:itemCount="4"
                tools:orientation="horizontal" />

...
                android:textAllCaps="true"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/btnForgetPassphrase" />

            <Button
                android:id="@+id/btnShowPrKey"
                style="@style/AppWidget.Button.Big.Red"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/default_margin_content"
                android:text="@string/show_private_key"
                android:textAllCaps="true"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
...
