...
    <string name="key_details">Key details</string>
    <string name="public_key_below_is_safe_to_share">Public Keys are safe to share</string>
    <string name="show_public_key">Show public key</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="save_to_file">Save to file</string>
    <string name="show_private_key">Show private key</string>
    <string name="template_fingerprint"><![CDATA[Fingerprint: <font color=\'#B7B7B7\'>%1$s</font>]]></string>
    <string name="see_backups_to_save_your_private_keys">Not implemented yet, see \"Backups\" to save your private key to file</string>
    <string name="copied">Copied</string>
    <string name="saved">Saved</string>
    <string name="no_key_available">No key available for your email account %1$s</string>
    <string name="not_saved_file_already_exists">Not saved because the file already exists</string>
    <string name="no_message_with_this_attachment">No message with this attachment</string>
    <string name="attachment_not_found">The attachment not found</string>
    <string name="no_pub_keys">There are no public keys</string>
    <string name="could_not_decrypt_message_due_to_error">Could not decrypt this message due to error:\n\n %1$s </string>
...
    </plurals>
    <plurals name="choose_pub_key">
        <item quantity="one">Your public key is ready to be added</item>
        <item quantity="other">Choose Public Keys to share</item>
    </plurals>
    <string name="pub_key">Public Key</string>
    <string name="template_created">Created: %1$s</string>
    <string name="template_modified">Modified: %1$s</string>
    <string name="template_algorithm">Algorithm: %1$s</string>
    <string name="template_algorithm_bits">Bits: %1$s</string>
    <string name="template_curve" translatable="false">Curve: %1$s</string>
    <string name="template_user" translatable="false">%1$d: %2$s</string>
    <string name="public_key_copied_to_clipboard">Public Key copied to clipboard</string>
    <string name="email_must_be_non_empty">Email should not be empty</string>
    <string name="your_email_address">Your email address</string>
    <string name="pending">Pending&#8230;</string>
    <string name="mark_unread">Mark unread</string>
    <string name="key_already_imported_finishing_setup">Key already imported, finishing setup.</string>
...
    <string name="auth_failure_hint_regular_accounts">Failed to log-in, please, check your account name and password in the server settings.</string>
    <string name="connection_lost">Connection lost</string>
    <string name="loading_labels">Loading labels</string>
    <string name="could_not_load_oauth_server_configuration">Couldn\'t load OAuth server configuration</string>
    <string name="all_mail">All Mail</string>
    <string name="stored_pass_phrase_loading">Stored pass phrase: loading &#8230;</string>
    <string name="stored_pass_phrase_matched">Stored pass phrase: matched</string>
    <string name="stored_pass_phrase_mismatch">Stored pass phrase: mismatch</string>
    <string name="could_not_check_pass_phrase">Could not check the pass phrase</string>
    <string name="details">Details</string>
    <string name="reply_to">Reply To</string>
    <string name="to">To</string>
    <string name="cc">Cc</string>
...
    <string name="error">Error</string>
    <string name="import_keys_from_different_sources">You are trying to import keys from different sources</string>
    <string name="thank_you_for_feedback">Thank you for the feedback</string>
    <string name="no_private_keys_suitable_for_encryption">Sorry, you can\'t send an encrypted message. You have no private keys suitable for encryption.</string>
    <string name="revoked">revoked</string>
    <string name="key_expiration">Key expiration: %1$s</string>
    <string name="expires">Expires: %1$s</string>
    <string name="key_does_not_expire">Key does not expire</string>
    <string name="status">Status:</string>
    <string name="valid">valid</string>
    <string name="not_valid">not valid</string>
    <string name="expired">expired</string>
    <string name="refreshing_keys_from_ekm_failed">Refreshing keys from EKM failed</string>
...
